@@ -34,13 +34,15 @@ from .md import ENV
 from .m_matrix import BSMATRIXd, BSMATRIXc
 from .m_wave import WAVE
 from .s__ import SIM_ as SIM
-from .u_opt import SET_RUN_MODE
+from .u_opt import SET_RUN_MODE, OPT_numdgt
 from .u_sim_data import SIM_DATA
 from .u_xprobe import XPROBE
 from .ap import CS
 from .mode import iTOTAL
+# from ._io_ import OMSTREAM
 
 from ._io_ import OMSTREAM__print, IO_mstdout_get, outset, outreset
+from .l_denoise import fixzero
 
 _iomstout = IO_mstdout_get()
 
