@@ -48,18 +48,17 @@ R2 ( 3 0 )  1.
 >>>>>.op 
 #           v(1)       v(2)       v(3)      
  27.        0.         0.         0.        
+>>>>>.options numdgt=1 
 >>>>>.pz 1 0 3 0 cur pz 
 poles
- -5.450890e-01+1.463696e-16j
- -1.182742e-01-8.914907e-01j
- -1.182742e-01+8.914907e-01j
- -6.948469e-02-4.671777e-01j
- -6.948469e-02+4.671777e-01j
-
+-0.118   + j* 0.891   
+-0.0695  + j* 0.467   
+-0.545   + j* 0.
+-0.0695  - j* 0.467   
+-0.118   - j* 0.891   
 zeroes
- 0.000000e+00-1.286180e+00j
- 0.000000e+00-5.129892e-01j
- 0.000000e+00+5.129892e-01j
- 0.000000e+00+1.286180e+00j
-
+ 0.+ j* 1.29    
+ 0.+ j* 0.513   
+ 0.- j* 0.513   
+ 0.- j* 1.29    
 >>>>>.end 
