@@ -43,16 +43,13 @@ rr ( 0 gnd )  1.p
 #           v(1)       v(2)       v(3)       v(gnd)    
  27.        0.         0.         0.         0.        
 poles
- -5.450614e-01+8.948298e-08j
- -1.182849e-01-8.914921e-01j
- -1.182812e-01+8.914917e-01j
- -6.950055e-02+4.671794e-01j
- -6.949235e-02-4.671825e-01j
-
+-0.118   + j* 0.891   
+-0.0695  + j* 0.467   
+-0.545   + j* 0.
+-0.0695  - j* 0.467   
+-0.118   - j* 0.891   
 zeroes
- -2.823810e+10+0.000000e+00j
- -3.215297e-12-5.129892e-01j
- -3.215297e-12+5.129892e-01j
- 7.475197e-13-1.286180e+00j
- 7.475197e-13+1.286180e+00j
-
+ 0.+ j* 1.29    
+ 0.+ j* 0.513   
+ 0.- j* 0.513   
+ 0.- j* 1.29    
