@@ -28,6 +28,7 @@ rr 0 gnd 1p
 .print op v(nodes)
 .op
 
+.options numdgt=1
 .pz 1 gnd 3 gnd
 
 .print ac v(3)
