@@ -21,3 +21,4 @@
 0.0.3 - wip
 =====
 * improve error handling
+* more portable tests (denoise)
